--- a/week4/assets/scss/pages/_store.scss
+++ b/week4/assets/scss/pages/_store.scss
@@ -81,19 +81,152 @@
     &-desc {
       padding: 20px 24px;
     }
-    &-desc li {
-      display: flex;
-      align-items: flex-start;
-    }
-    &-desc li:not(last-child) {
-      margin-bottom: 8px;
-    }
-    &-desc li a{
-        font-size: 20px;;
-    }
     &-desc .material-symbols-outlined {
       margin-right: 8px;
       font-size: 24px;
     }
   }
+}
+
+.store-list .store-desc li {
+  display: flex;
+  align-items: flex-start;
+}
+
+.store-list .store-desc li:not(last-child) {
+  margin-bottom: 8px;
+}
+
+.store-list .store-desc li a{
+  font-size: 20px;
+}
+
+
+//store-map
+.map {
+  padding-top: 96px;
+  padding-bottom: 80px;
+
+  &-body{
+    display: flex;
+    @include pad{
+      display: flex;
+      flex-wrap: wrap;
+    }
+    @include mobile{
+      display: flex;
+      flex-wrap: wrap;
+    }
+  }
+
+  &-list {
+    display: flex;
+    flex-wrap: wrap;
+    gap: 24px;
+    width:42%;
+    padding-right: 24px;
+    @include pad{
+      width: 100%;
+      margin-bottom: 24px;
+      padding-right: 0;
+    }
+    @include mobile {
+      width: 100%;
+      padding-right: 0;
+      font-size: 20px;
+    }
+  }
+}
+
+.map-list .card{
+
+  @include pad{
+    display: flex;
+    width: calc(50% - 12px);
+  }
+
+  @include mobile{
+    display: flex;
+    width: 100%;
+    justify-content: center;
+  }
+
+      // @include pad{
+      //   display: flex;
+        // flex-wrap: wrap;
+        // justify-content: space-between;
+        // align-items:stretch;
+      // }
+    // }
+    // @include pad {
+      // width: 100%;
+      // width: calc(50% - 12px);
+    // }
+
+    &-title {
+      font-size: 24px;
+      border-bottom: solid 1px #00000020;
+      padding: 8px 24px;
+    }
+    &-info {
+      border: solid 1px #00000020;
+    }
+    &-desc {
+      padding: 16px 24px;
+    }
+  }
+
+.card-picture img{
+    // display: flex;
+    // align-items:stretch;
+    @include pad{
+      object-fit: cover;
+      height: 100%;
+    }
+}
+
+.map-list .card .card-desc li {
+  display: flex;
+  align-items: flex-start;
+}
+.map-list .card .card-desc li:not(last-child) {
+  margin-bottom: 8px;
+}
+.map-list .card .card-desc li a{
+    font-size: 20px;
+}
+.map-list .card .card-desc .material-symbols-outlined {
+  margin-right: 8px;
+  font-size: 24px;
+}
+
+.map-iframe{
+  width: 100%;
+  max-width: 58%;
+  margin: 0 auto;
+  position: relative;
+
+  @include pad{
+    width: 100%;
+    max-width: 100%;
+  }
+  @include mobile{
+    width: 100%;
+    max-width: 100%;
+  }
+}
+
+.map-iframe li {
+  position: relative;
+  padding-bottom: 56.25%;
+  width: 100%;
+  height:100%;
+}
+
+.map-iframe li iframe {
+  position: absolute; 
+  top: 0; 
+  left: 0; 
+  width: 100%; 
+  height: 100%;
 }
